[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opentelemetry-exporter-jaeger-proto-grpc"
dynamic = ["version"]
description = "Jaeger Protobuf Exporter for OpenTelemetry"
readme = "README.rst"
license = "Apache-2.0"
requires-python = ">=3.7"
authors = [
  { name = "OpenTelemetry Authors", email = "cncf-opentelemetry-contributors@lists.cncf.io" },
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Typing :: Typed",
]
dependencies = [
  "googleapis-common-protos ~= 1.52, < 1.56.3",
  "grpcio >= 1.0.0, < 2.0.0",
  "opentelemetry-api ~= 1.3",
  "opentelemetry-sdk ~= 1.11",
]

[project.optional-dependencies]
test = []

[project.entry-points.opentelemetry_traces_exporter]
jaeger_proto = "opentelemetry.exporter.jaeger.proto.grpc:JaegerExporter"

[project.urls]
Homepage = "https://github.com/open-telemetry/opentelemetry-python/tree/main/exporter/opentelemetry-exporter-jaeger-proto-grpc"

[tool.hatch.version]
path = "src/opentelemetry/exporter/jaeger/proto/grpc/version.py"

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/tests",
]

[tool.hatch.build.targets.wheel]
packages = ["src/opentelemetry"]
