[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opentelemetry-exporter-otlp-json-file"
dynamic = ["version"]
description = "OpenTelemetry JSON File Exporter"
readme = "README.rst"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
  { name = "OpenTelemetry Authors", email = "cncf-opentelemetry-contributors@lists.cncf.io" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Framework :: OpenTelemetry",
  "Framework :: OpenTelemetry :: Exporters",
  "Intended Audience :: Developers",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "opentelemetry-exporter-otlp-json-common == 0.66b0.dev",
  "opentelemetry-sdk ~= 1.45.0.dev",
]

[project.entry-points.opentelemetry_traces_exporter]
otlp_json_file = "opentelemetry.exporter.otlp.json.file.trace_exporter:FileSpanExporter"

[project.entry-points.opentelemetry_metrics_exporter]
otlp_json_file = "opentelemetry.exporter.otlp.json.file.metric_exporter:FileMetricExporter"

[project.entry-points.opentelemetry_logs_exporter]
otlp_json_file = "opentelemetry.exporter.otlp.json.file._log_exporter:FileLogExporter"

[project.urls]
Homepage = "https://github.com/open-telemetry/opentelemetry-python/tree/main/exporter/opentelemetry-exporter-otlp-json-file"
Repository = "https://github.com/open-telemetry/opentelemetry-python"

[tool.hatch.version]
path = "src/opentelemetry/exporter/otlp/json/file/version/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/tests",
]

[tool.hatch.build.targets.wheel]
packages = ["src/opentelemetry"]
