[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opentelemetry-exporter-otlp-proto-grpc"
dynamic = ["version"]
description = "OpenTelemetry Collector Protobuf over gRPC Exporter"
readme = "README.rst"
license = {text = "Apache-2.0"}
requires-python = ">=3.8"
authors = [
  { name = "OpenTelemetry Authors", email = "cncf-opentelemetry-contributors@lists.cncf.io" },
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Framework :: OpenTelemetry",
  "Framework :: OpenTelemetry :: Exporters",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "Deprecated >= 1.2.6",
  "googleapis-common-protos ~= 1.52",
  "grpcio >= 1.0.0, < 2.0.0",
  "opentelemetry-api ~= 1.15",
  "opentelemetry-proto == 1.27.0",
  "opentelemetry-sdk ~= 1.27.0",
  "opentelemetry-exporter-otlp-proto-common == 1.27.0",
]

[project.entry-points.opentelemetry_logs_exporter]
otlp_proto_grpc = "opentelemetry.exporter.otlp.proto.grpc._log_exporter:OTLPLogExporter"

[project.entry-points.opentelemetry_metrics_exporter]
otlp_proto_grpc = "opentelemetry.exporter.otlp.proto.grpc.metric_exporter:OTLPMetricExporter"

[project.entry-points.opentelemetry_traces_exporter]
otlp_proto_grpc = "opentelemetry.exporter.otlp.proto.grpc.trace_exporter:OTLPSpanExporter"

[project.urls]
Homepage = "https://github.com/open-telemetry/opentelemetry-python/tree/main/exporter/opentelemetry-exporter-otlp-proto-grpc"

[tool.hatch.version]
path = "src/opentelemetry/exporter/otlp/proto/grpc/version.py"

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/tests",
]

[tool.hatch.build.targets.wheel]
packages = ["src/opentelemetry"]
