[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opentelemetry-exporter-zipkin-proto-http"
dynamic = ["version"]
description = "Zipkin Span Protobuf Exporter for OpenTelemetry"
readme = "README.rst"
license = "Apache-2.0"
requires-python = ">=3.7"
authors = [
  { name = "OpenTelemetry Authors", email = "cncf-opentelemetry-contributors@lists.cncf.io" },
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Typing :: Typed",
]
dependencies = [
  "opentelemetry-api ~= 1.3",
  "opentelemetry-exporter-zipkin-json == 1.17.0.dev",
  "opentelemetry-sdk ~= 1.11",
  "protobuf ~= 3.12",
  "requests ~= 2.7",
]

[project.optional-dependencies]
test = []

[project.entry-points.opentelemetry_traces_exporter]
zipkin_proto = "opentelemetry.exporter.zipkin.proto.http:ZipkinExporter"

[project.urls]
Homepage = "https://github.com/open-telemetry/opentelemetry-python/tree/main/exporter/opentelemetry-exporter-zipkin-proto-http"

[tool.hatch.version]
path = "src/opentelemetry/exporter/zipkin/proto/http/version.py"

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/tests",
]

[tool.hatch.build.targets.wheel]
packages = ["src/opentelemetry"]
